--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Pruebas</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>Tarjetas</h1>
+      <div class="tarjeta">
+      <h2>Alan Azocar</h2>
+      <h3>Description</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+        corporis culpa enim ad provident neque ipsam molestias laborum harum
+        saepe!
+      </p>
+    </div>
+    </main>
+  </body>
 </html>
