--- a/index.html
+++ b/index.html
@@ -3,21 +3,119 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <title>Pruebas</title>
   </head>
   <body>
     <main>
-      <h1>Tarjetas</h1>
-      <div class="tarjeta">
-      <h2>Alan Azocar</h2>
-      <h3>Description</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-        corporis culpa enim ad provident neque ipsam molestias laborum harum
-        saepe!
-      </p>
-    </div>
+      <h1>Usuarios</h1>
+      <section class="grupo">
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" />
+            <h2>Alan Azocar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+              Hic itaque distinctio sequi placeat consequuntur suscipit,
+              provident optio! Atque, ex?
+            </p>
+          </div>
+        </a>
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" />
+            <h2>Alan Azocar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+              Hic itaque distinctio sequi placeat consequuntur suscipit,
+              provident optio! Atque, ex?
+            </p>
+          </div>
+        </a>
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" />
+            <h2>Alan Azocar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+              Hic itaque distinctio sequi placeat consequuntur suscipit,
+              provident optio! Atque, ex?
+            </p>
+          </div>
+        </a>
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" />
+            <h2>Alan Azocar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+              Hic itaque distinctio sequi placeat consequuntur suscipit,
+              provident optio! Atque, ex?
+            </p>
+          </div>
+        </a>
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" />
+            <h2>Alan Azocar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+              Hic itaque distinctio sequi placeat consequuntur suscipit,
+              provident optio! Atque, ex?
+            </p>
+          </div>
+        </a>
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" />
+            <h2>Alan Azocar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+              Hic itaque distinctio sequi placeat consequuntur suscipit,
+              provident optio! Atque, ex?
+            </p>
+          </div>
+        </a>
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" />
+            <h2>Alan Azocar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+              Hic itaque distinctio sequi placeat consequuntur suscipit,
+              provident optio! Atque, ex?
+            </p>
+          </div>
+        </a>
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" />
+            <h2>Alan Azocar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+              Hic itaque distinctio sequi placeat consequuntur suscipit,
+              provident optio! Atque, ex?
+            </p>
+          </div>
+        </a>
+        
+      </section>
     </main>
   </body>
 </html>
