--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <h1>Usuarios</h1>
       <section class="grupo">
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
           <div class="card">
             <img src="./assets/logo.png" alt="logo alan" />
             <h2>Alan Azocar</h2>
@@ -30,7 +30,7 @@
             </p>
           </div>
         </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
           <div class="card">
             <img src="./assets/logo.png" alt="logo alan" />
             <h2>Alan Azocar</h2>
@@ -42,7 +42,7 @@
             </p>
           </div>
         </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
           <div class="card">
             <img src="./assets/logo.png" alt="logo alan" />
             <h2>Alan Azocar</h2>
@@ -54,7 +54,7 @@
             </p>
           </div>
         </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
           <div class="card">
             <img src="./assets/logo.png" alt="logo alan" />
             <h2>Alan Azocar</h2>
@@ -66,7 +66,7 @@
             </p>
           </div>
         </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
           <div class="card">
             <img src="./assets/logo.png" alt="logo alan" />
             <h2>Alan Azocar</h2>
@@ -78,7 +78,7 @@
             </p>
           </div>
         </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
           <div class="card">
             <img src="./assets/logo.png" alt="logo alan" />
             <h2>Alan Azocar</h2>
@@ -90,7 +90,12 @@
             </p>
           </div>
         </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+        <a
+          href="https://www.google.com"
+          class="enlace-tarjeta"
+          target="_blank"
+          title="Ver Más"
+        >
           <div class="card">
             <img src="./assets/logo.png" alt="logo alan" />
             <h2>Alan Azocar</h2>
@@ -102,7 +107,7 @@
             </p>
           </div>
         </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank">
+        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
           <div class="card">
             <img src="./assets/logo.png" alt="logo alan" />
             <h2>Alan Azocar</h2>
@@ -114,7 +119,6 @@
             </p>
           </div>
         </a>
-        
       </section>
     </main>
   </body>
