--- a/index.html
+++ b/index.html
@@ -16,107 +16,158 @@
   </head>
   <body>
     <main>
-      <h1>Usuarios</h1>
+      <h1>Nuestros profesionales</h1>
       <section class="grupo">
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" />
-            <h2>Alan Azocar</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-              Hic itaque distinctio sequi placeat consequuntur suscipit,
-              provident optio! Atque, ex?
-            </p>
-          </div>
-        </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" />
-            <h2>Alan Azocar</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-              Hic itaque distinctio sequi placeat consequuntur suscipit,
-              provident optio! Atque, ex?
-            </p>
-          </div>
-        </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" />
-            <h2>Alan Azocar</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-              Hic itaque distinctio sequi placeat consequuntur suscipit,
-              provident optio! Atque, ex?
-            </p>
-          </div>
-        </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" />
-            <h2>Alan Azocar</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-              Hic itaque distinctio sequi placeat consequuntur suscipit,
-              provident optio! Atque, ex?
-            </p>
-          </div>
-        </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" />
-            <h2>Alan Azocar</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-              Hic itaque distinctio sequi placeat consequuntur suscipit,
-              provident optio! Atque, ex?
-            </p>
-          </div>
-        </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" />
-            <h2>Alan Azocar</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-              Hic itaque distinctio sequi placeat consequuntur suscipit,
-              provident optio! Atque, ex?
-            </p>
-          </div>
-        </a>
         <a
-          href="https://www.google.com"
+          href="https://www.behance.net/AlanAzocar"
           class="enlace-tarjeta"
           target="_blank"
           title="Ver Más"
         >
           <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" />
-            <h2>Alan Azocar</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-              Hic itaque distinctio sequi placeat consequuntur suscipit,
-              provident optio! Atque, ex?
-            </p>
+            <img src="./assets/logo.png" alt="logo alan" class="logo" />
+            <div class="contenido">
+              <h2>Alan Azocar</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+                Hic itaque distinctio sequi placeat consequuntur suscipit,
+                provident optio! Atque, ex?
+              </p>
+            </div>
           </div>
         </a>
-        <a href="https://www.google.com" class="enlace-tarjeta" target="_blank" title="Ver Más">
+        <a
+          href="https://www.behance.net/AlanAzocar"
+          class="enlace-tarjeta"
+          target="_blank"
+          title="Ver Más"
+        >
           <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" />
-            <h2>Alan Azocar</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-              incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-              Hic itaque distinctio sequi placeat consequuntur suscipit,
-              provident optio! Atque, ex?
-            </p>
+            <img src="./assets/logo.png" alt="logo alan" class="logo" />
+            <div class="contenido">
+              <h2>Alan Azocar</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+                Hic itaque distinctio sequi placeat consequuntur suscipit,
+                provident optio! Atque, ex?
+              </p>
+            </div>
+          </div>
+        </a>
+        <a
+          href="https://www.behance.net/AlanAzocar"
+          class="enlace-tarjeta"
+          target="_blank"
+          title="Ver Más"
+        >
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" class="logo" />
+            <div class="contenido">
+              <h2>Alan Azocar</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+                Hic itaque distinctio sequi placeat consequuntur suscipit,
+                provident optio! Atque, ex?
+              </p>
+            </div>
+          </div>
+        </a>
+        <a
+          href="https://www.behance.net/AlanAzocar"
+          class="enlace-tarjeta"
+          target="_blank"
+          title="Ver Más"
+        >
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" class="logo" />
+            <div class="contenido">
+              <h2>Alan Azocar</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+                Hic itaque distinctio sequi placeat consequuntur suscipit,
+                provident optio! Atque, ex?
+              </p>
+            </div>
+          </div>
+        </a>
+        <a
+          href="https://www.behance.net/AlanAzocar"
+          class="enlace-tarjeta"
+          target="_blank"
+          title="Ver Más"
+        >
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" class="logo" />
+            <div class="contenido">
+              <h2>Alan Azocar</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+                Hic itaque distinctio sequi placeat consequuntur suscipit,
+                provident optio! Atque, ex?
+              </p>
+            </div>
+          </div>
+        </a>
+        <a
+          href="https://www.behance.net/AlanAzocar"
+          class="enlace-tarjeta"
+          target="_blank"
+          title="Ver Más"
+        >
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" class="logo" />
+            <div class="contenido">
+              <h2>Alan Azocar</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+                Hic itaque distinctio sequi placeat consequuntur suscipit,
+                provident optio! Atque, ex?
+              </p>
+            </div>
+          </div>
+        </a>
+        <a
+          href="https://www.behance.net/AlanAzocar"
+          class="enlace-tarjeta"
+          target="_blank"
+          title="Ver Más"
+        >
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" class="logo" />
+            <div class="contenido">
+              <h2>Alan Azocar</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+                Hic itaque distinctio sequi placeat consequuntur suscipit,
+                provident optio! Atque, ex?
+              </p>
+            </div>
+          </div>
+        </a>
+        <a
+          href="https://www.behance.net/AlanAzocar"
+          class="enlace-tarjeta"
+          target="_blank"
+          title="Ver Más"
+        >
+          <div class="card">
+            <img src="./assets/logo.png" alt="logo alan" class="logo" />
+            <div class="contenido">
+              <h2>Alan Azocar</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
+                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
+                Hic itaque distinctio sequi placeat consequuntur suscipit,
+                provident optio! Atque, ex?
+              </p>
+            </div>
           </div>
         </a>
       </section>
