--- a/index.html
+++ b/index.html
@@ -12,165 +12,14 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <title>Pruebas</title>
   </head>
   <body>
     <main>
-      <h1>Nuestros profesionales</h1>
-      <section class="grupo">
-        <a
-          href="https://www.behance.net/AlanAzocar"
-          class="enlace-tarjeta"
-          target="_blank"
-          title="Ver Más"
-        >
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" class="logo" />
-            <div class="contenido">
-              <h2>Alan Azocar</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-                Hic itaque distinctio sequi placeat consequuntur suscipit,
-                provident optio! Atque, ex?
-              </p>
-            </div>
-          </div>
-        </a>
-        <a
-          href="https://www.behance.net/AlanAzocar"
-          class="enlace-tarjeta"
-          target="_blank"
-          title="Ver Más"
-        >
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" class="logo" />
-            <div class="contenido">
-              <h2>Alan Azocar</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-                Hic itaque distinctio sequi placeat consequuntur suscipit,
-                provident optio! Atque, ex?
-              </p>
-            </div>
-          </div>
-        </a>
-        <a
-          href="https://www.behance.net/AlanAzocar"
-          class="enlace-tarjeta"
-          target="_blank"
-          title="Ver Más"
-        >
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" class="logo" />
-            <div class="contenido">
-              <h2>Alan Azocar</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-                Hic itaque distinctio sequi placeat consequuntur suscipit,
-                provident optio! Atque, ex?
-              </p>
-            </div>
-          </div>
-        </a>
-        <a
-          href="https://www.behance.net/AlanAzocar"
-          class="enlace-tarjeta"
-          target="_blank"
-          title="Ver Más"
-        >
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" class="logo" />
-            <div class="contenido">
-              <h2>Alan Azocar</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-                Hic itaque distinctio sequi placeat consequuntur suscipit,
-                provident optio! Atque, ex?
-              </p>
-            </div>
-          </div>
-        </a>
-        <a
-          href="https://www.behance.net/AlanAzocar"
-          class="enlace-tarjeta"
-          target="_blank"
-          title="Ver Más"
-        >
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" class="logo" />
-            <div class="contenido">
-              <h2>Alan Azocar</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-                Hic itaque distinctio sequi placeat consequuntur suscipit,
-                provident optio! Atque, ex?
-              </p>
-            </div>
-          </div>
-        </a>
-        <a
-          href="https://www.behance.net/AlanAzocar"
-          class="enlace-tarjeta"
-          target="_blank"
-          title="Ver Más"
-        >
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" class="logo" />
-            <div class="contenido">
-              <h2>Alan Azocar</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-                Hic itaque distinctio sequi placeat consequuntur suscipit,
-                provident optio! Atque, ex?
-              </p>
-            </div>
-          </div>
-        </a>
-        <a
-          href="https://www.behance.net/AlanAzocar"
-          class="enlace-tarjeta"
-          target="_blank"
-          title="Ver Más"
-        >
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" class="logo" />
-            <div class="contenido">
-              <h2>Alan Azocar</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-                Hic itaque distinctio sequi placeat consequuntur suscipit,
-                provident optio! Atque, ex?
-              </p>
-            </div>
-          </div>
-        </a>
-        <a
-          href="https://www.behance.net/AlanAzocar"
-          class="enlace-tarjeta"
-          target="_blank"
-          title="Ver Más"
-        >
-          <div class="card">
-            <img src="./assets/logo.png" alt="logo alan" class="logo" />
-            <div class="contenido">
-              <h2>Alan Azocar</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                incidunt tenetur dolore ipsam ex eligendi ullam qui laborum vel.
-                Hic itaque distinctio sequi placeat consequuntur suscipit,
-                provident optio! Atque, ex?
-              </p>
-            </div>
-          </div>
-        </a>
-      </section>
+      <div class="caja-link">
+        <a href="tarjetas.html">Tarjetas</a>
+      </div>
     </main>
   </body>
 </html>
