estilos para el index 1

--- a/index.html
+++ b/index.html
@@ -17,9 +17,38 @@
   </head>
   <body>
     <main>
-      <div class="caja-link">
-        <a href="tarjetas.html">Tarjetas</a>
-      </div>
+      <section class="links">
+        <div class="caja-link">
+          <a href="tarjetas.html">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+        <div class="caja-link">
+          <a href="">Tarjetas</a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
