--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <div class="caja-link">
           <a href="">Tarjetas</a>
         </div>
+
+        <a href="index.html" class="home-logo"
+          ><img src="./assets/logo.png" alt="Logo"
+        /></a>
       </section>
     </main>
   </body>
