--- a/tarjetas.html
+++ b/tarjetas.html
@@ -172,6 +172,9 @@
           </div>
         </a>
       </section>
+      <a href="index.html" class="home-logo"
+          ><img src="./assets/logo.png" alt="Logo"
+        /></a>
     </main>
   </body>
 </html>
